# midom

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  HISTORY.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
docs/: __init__.py  docs_requirements.txt
docs/scripts/: install_plantuml.sh
docs/source/: comparison.rst  components.rst  conf.py  design.rst  documentation.rst  glossary.rst  index.rst  intro.rst  modules.rst  objects.rst  parts.rst  spaces.rst
docs/source/diagrams/: action_space.puml  components.puml  components_filter.puml  components_filters.puml  components_pixel.puml  components_private.puml  components_tags.puml  dataset_space.puml  delta_space.puml  domain_protocol.puml  protocol_deidentifier.puml  system_context.puml  validation_objects.puml  validation_set.puml
midom/: components.py  constants.py  core.py  identifiers.py  serialization.py  subspaces.py  validation.py
scripts/: __init__.py  generate_example_protocol.py
tests/: conftest.py  factories.py  test_identifiers.py  test_serialization.py  test_subspaces.py
