[project]
name = "midom"
version = "0.1.0"
description = "Concepts and relations to describe the process of DICOM deidentification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-plantuml>=0.30",
]

[dependency-groups]
dev = []
