[project]
name = "midom"
version = "0.1.0"
description = "Concepts and relations to describe the process of DICOM deidentification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dicomcriterion>=0.1.0",
    "pydantic>=2.11.5",
    "pydicom>=2.4.4",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-plantuml>=0.30",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "factory-boy>=3.3.3",
    "livereload>=2.7.1",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py312, py313
[gh-actions]
python =
    3.12: py312
    3.13: py313
[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov=tests/ --cov=midom/
"""


[tool.black]
line-length = 79
